--- a/selenium/docker-compose.yml
+++ b/selenium/docker-compose.yml
@@ -3,17 +3,46 @@ hub:
   ports:
     - "4444:4444"
   environment:
-    - GRID_TIMEOUT=60
-    - GRID_BROWSER_TIMEOUT=30
+    - GRID_TIMEOUT=600
+    - GRID_BROWSER_TIMEOUT=60
   restart: always
 
 phantomjs:
   image: easypi/selenium-node-phantomjs
-  ports:
-    - "5555:5555"
   environment:
     - HOST=5.6.7.8
-    - PORT=5555
     - HUB_HOST=1.2.3.4
     - HUB_PORT=4444
   restart: always
+
+phantomjs-1:
+  extends:
+    service: phantomjs
+  ports:
+    - "5001:5001"
+  environment:
+    - PORT=5001
+
+phantomjs-2:
+  extends:
+    service: phantomjs
+  ports:
+    - "5002:5002"
+  environment:
+    - PORT=5002
+
+phantomjs-3:
+  extends:
+    service: phantomjs
+  ports:
+    - "5003:5003"
+  environment:
+    - PORT=5003
+
+phantomjs-4:
+  extends:
+    service: phantomjs
+  ports:
+    - "5004:5004"
+  environment:
+    - PORT=5004
